--- a/src/MEGASync/gui/ui/PermissionsDialog.ui
+++ b/src/MEGASync/gui/ui/PermissionsDialog.ui
@@ -351,13 +351,13 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>26</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>26</height>
+         <height>16777215</height>
         </size>
        </property>
        <property name="cursor">
@@ -379,13 +379,13 @@
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>26</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>26</height>
+         <height>16777215</height>
         </size>
        </property>
        <property name="cursor">
