--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueActionTitle.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueActionTitle.ui
@@ -212,7 +212,7 @@ border-radius: 4px;
                    <height>24</height>
                   </size>
                  </property>
-                 <property name="type" stdset="0">
+                 <property name="class" stdset="0">
                   <string notr="true">icon-label</string>
                  </property>
                 </widget>
@@ -311,7 +311,7 @@ border-radius: 4px;
                  <property name="text">
                   <string notr="true"/>
                  </property>
-                 <property name="type" stdset="0">
+                 <property name="class" stdset="0">
                   <string notr="true">icon-label</string>
                  </property>
                 </widget>
