--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -565,18 +565,12 @@
         <file alias="images/img_wizard_3.png">images/img_wizard_3.png</file>
         <file alias="images/img_wizard_3@2x.png">images/img_wizard_3@2x.png</file>
         <file alias="images/img_wizard_3@3x.png">images/img_wizard_3@3x.png</file>
-        <file alias="images/import_error_ico.png">images/import_error_ico.png</file>
-        <file alias="images/import_error_ico@2x.png">images/import_error_ico@2x.png</file>
-        <file alias="images/import_error_ico@3x.png">images/import_error_ico@3x.png</file>
-        <file alias="images/import_ok_icon.png">images/import_ok_icon.png</file>
-        <file alias="images/import_ok_icon@2x.png">images/import_ok_icon@2x.png</file>
-        <file alias="images/import_ok_icon@3x.png">images/import_ok_icon@3x.png</file>
         <file alias="images/import_toolbar_ico.png">images/import_toolbar_ico.png</file>
         <file alias="images/import_toolbar_ico@2x.png">images/import_toolbar_ico@2x.png</file>
         <file alias="images/import_toolbar_ico@3x.png">images/import_toolbar_ico@3x.png</file>
-        <file alias="images/import_warning_ico.png">images/import_warning_ico.png</file>
-        <file alias="images/import_warning_ico@2x.png">images/import_warning_ico@2x.png</file>
-        <file alias="images/import_warning_ico@3x.png">images/import_warning_ico@3x.png</file>
+        <file alias="images/import_check.svg">images/import_check.svg</file>
+        <file alias="images/import_failed.svg">images/import_failed.svg</file>
+        <file alias="images/alert_triangle.svg">images/alert_triangle.svg</file>
         <file alias="images/incoming_share.png">images/incoming_share.png</file>
         <file alias="images/incoming_share@2x.png">images/incoming_share@2x.png</file>
         <file alias="images/incoming_share@3x.png">images/incoming_share@3x.png</file>
