New SideBarTab component

--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1260,5 +1260,13 @@
         <file alias="x-circle_small_thin_outline">images/themed/tokenizable/x-circle_small_thin_outline.svg</file>
         <file alias="x-circle_small_thin_solid">images/themed/tokenizable/x-circle_small_thin_solid.svg</file>
         <file alias="external_link_small_thin_outline">images/themed/tokenizable/external_link_small_thin_outline.svg</file>
+        <file alias="cloud_on">images/themed/tokenizable/Node Selector/Tabs ON/cloud_on.svg</file>
+        <file alias="devices_on">images/themed/tokenizable/Node Selector/Tabs ON/devices_on.svg</file>
+        <file alias="folder-users_on">images/themed/tokenizable/Node Selector/Tabs ON/folder-users_on.svg</file>
+        <file alias="trash_on">images/themed/tokenizable/Node Selector/Tabs ON/trash_on.svg</file>
+        <file alias="cloud_off">images/themed/tokenizable/Node Selector/Tabs OFF/cloud_off.svg</file>
+        <file alias="devices_off">images/themed/tokenizable/Node Selector/Tabs OFF/devices_off.svg</file>
+        <file alias="folder-users_off">images/themed/tokenizable/Node Selector/Tabs OFF/folder-users_off.svg</file>
+        <file alias="trash_off">images/themed/tokenizable/Node Selector/Tabs OFF/trash_off.svg</file>
     </qresource>
 </RCC>
